# ChangeLog for media-plugins/vdr-mp3ng
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-mp3ng/ChangeLog,v 1.20 2014/11/08 18:13:01 hd_brummy Exp $

  08 Nov 2014; Joerg Bornkessel <hd_brummy@gentoo.org>
  vdr-mp3ng-0.0.1_pre5.ebuild:
  fixed wrt bug 528646, missing patch, thx to Enlik; wrt bug 314307 virtual
  depends

  08 Jan 2014; Joerg Bornkessel <hd_brummy@gentoo.org>
  -vdr-mp3ng-0.0.1_pre4.ebuild:
  cleanup old, depended on vdr-plugin.eclass

  08 Jan 2014; Joerg Bornkessel <hd_brummy@gentoo.org>
  vdr-mp3ng-0.0.1_pre5.ebuild:
  fixed epatch

*vdr-mp3ng-0.0.1_pre5 (08 Jan 2014)

  08 Jan 2014; Joerg Bornkessel <hd_brummy@gentoo.org>
  +vdr-mp3ng-0.0.1_pre5.ebuild:
  fixed i18n issues; vdr-plugin-2.eclass

  09 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
  vdr-mp3ng-0.0.1_pre4.ebuild, +files/vdr-mp3ng-0.0.1_pre4-glibc-2.10.patch:
  Fix building with GLIBC 2.10+ wrt #276177.

  25 Oct 2008; Joerg Bornkessel <hd_brummy@gentoo.org>
  -files/vdr-mp3ng-0.0.1_pre3-1.3.37.diff,
  -files/vdr-mp3ng-0.0.1_pre3-gcc4.diff,
  -files/vdr-mp3ng-0.0.1_pre3-gentoo.diff:
  -

  25 Oct 2008; Joerg Bornkessel <hd_brummy@gentoo.org>
  +files/imagemagick-6.4.x.diff, -vdr-mp3ng-0.0.1_pre3.ebuild,
  vdr-mp3ng-0.0.1_pre4.ebuild:
  cleanup; added patch to fix missing imagemagick header; thanks also to
  g.naray on #241618 for reporting this

  29 Apr 2008; Matthias Schwarzott <zzam@gentoo.org>
  vdr-mp3ng-0.0.1_pre3.ebuild, vdr-mp3ng-0.0.1_pre4.ebuild:
  Fixed quoting.

  29 Apr 2008; Matthias Schwarzott <zzam@gentoo.org>
  vdr-mp3ng-0.0.1_pre4.ebuild:
  Marked stable on x86.

  01 Apr 2007; Joerg Bornkessel <hd_brummy@gentoo.org>
  files/vdr-mp3ng-0.0.1_pre4-vdr-1.5.1.diff:
  txpo in 1.5.1 diff fixed

  25 Mar 2007; Joerg Bornkessel <hd_brummy@gentoo.org>
  +files/vdr-mp3ng-0.0.1_pre4-vdr-1.5.1.diff, vdr-mp3ng-0.0.1_pre4.ebuild:
  patch added; ready for VDR 1.5.x
