@@ -1,6 +1,11 @@
 # ChangeLog for media-plugins/vdr-mp3ng
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-mp3ng/ChangeLog,v 1.20 2014/11/08 18:13:01 hd_brummy Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-mp3ng/ChangeLog,v 1.21 2015/01/17 21:22:44 hd_brummy Exp $
+
+  17 Jan 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
+  vdr-mp3ng-0.0.1_pre5.ebuild:
+  fixed typo, this fixed the not founding patch sources, wrt bug 536824, thx to
+  T.Foerster for reporting this
 
   08 Nov 2014; Joerg Bornkessel <hd_brummy@gentoo.org>
   vdr-mp3ng-0.0.1_pre5.ebuild:
